[project]
name = "random-wikipedia-article"
version = "0.1"
description = "Display extracts from random Wikipedia articles"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"

[project.urls]
Homepage = "https://yourname.dev/projects/random-wikipedia-article"

[project.scripts]
random-wikipedia-article = "random_wikipedia_article:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
