[project]
name = "random-wikipedia-article"
description = "Display extracts from random Wikipedia articles"
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://yourname.dev/projects/random-wikipedia-article"

[project.scripts]
random-wikipedia-article = "random_wikipedia_article:main"

[tool.hatch.version]
path = "random_wikipedia_article.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
